--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
 
     //audio lib
     implementation project(path: ':audio_library')
+//    implementation 'com.github.yangkun19921001:AudioManager:v1.0.2'
 
 
     //bugly
