--- a/audio_library/build.gradle
+++ b/audio_library/build.gradle
@@ -27,6 +27,9 @@ android {
                 arguments "-DANDROID_STL=c++_shared"
 //                arguments "-DANDROID_ARM_NEON=TRUE", "-DANDROID_TOOLCHAIN=clang", "-DANDROID_STL=c++_shared"
                 abiFilters "armeabi-v7a", "arm64-v8a"
+                //lame undefined reference to `bcopy'
+//                cppFlags "-frtti -fexceptions"
+                cFlags "-DSTDC_HEADERS"
             }
         }
 
